--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Udacity Attendance</h1>
-    <table>
+    <table id="t-attendance">
         <thead>
             <tr>
                 <th class="name-col">Student Name</th>
@@ -27,7 +27,7 @@
                 <th class="missed-col">Days missed col</th>
             </tr>
         </thead>
-        <tbody id="table-content">
+        <tbody>
             
         </tbody>
     </table>
